# hierarchical-wfc

./: -  .gitignore  API.md  Cargo.toml  README.md  constraint_editor_renderdoc.cap  less  log  multipass  notes  render-graph.dot
assets/: render-graph.dot  samples.xml
assets/semantics/: edge_basic.json  edge_basic_test.json  edge_directional_test.json  facade copy.json  facade.json  frame_test copy.json  frame_test.json  house_tileset.json  quad_mesh_test.json  spec.md
assets/shaders/: background_grid.wgsl  background_grid_pp.wgsl  debug_line.wgsl  ground_plane.wgsl  tile_pbr.wgsl  tile_pbr_vertex_pre.wgsl  tri_point.wgsl
assets/src/: mc-castle.blend  mc-castle.blend1  untitled.blend  untitled.blend1  village.blend  w-short-full.gltf
assets/voxel/: convert_gltf.fish
benches/: backtracking.rs  backtracking_process.ipynb  basictileset.eps  brian.rs  carcassonnetileset.eps  castle.eps  chunking.rs  chunking_process.ipynb  circuit.eps  failure_rate.ipynb  failure_rate.rs  map_size.rs  process.ipynb  process_chunking.ipynb  process_stats.ipynb  standard.rs  stats.rs  stats_process.ipynb  summer.eps  utils.rs  wfc.rs
benches/data/: backtracking.csv  backtracking_backup.csv  backtracking_data.txt  map_size_deterministic.csv  map_size_non_deterministic.csv  map_size_standard.csv  plot_backtracking.py  quality-Carcassonne.eps  quality-Circuit.eps  (+4 more)
chunking/: Cargo.toml
core_wfc/: Cargo.toml
figs/: backtracks.eps  decision-distrubtuion.eps  time-128x128.eps  time-32x32.eps
grid_wfc/: Cargo.toml
src/: background_grid_material.rs  basic_tileset.rs  carcassonne_tileset.rs  castle_tilset.rs  cpu_executer.rs  cpu_executor.rs  debug_line.rs  generate_grid.rs  graph.rs  graph_grid.rs  graph_grid_8D.rs  graph_wfc.rs  grid_wfc.rs  guild.rs  hierarchical_tileset.rs  lib.rs  main.rs  multithreaded_executor.rs  pan_orbit_cam.rs  planar_graph_wfc.rs  point_material.rs  tile_pbr_material.rs  tileset.rs  ui.rs  wfc.rs  wfc_graph.rs  wfc_task.rs  world.rs
utilities/: Cargo.toml
web/: README.md  index.html
(+136 files in other folders)
