[package]
name = "hierarchical-wfc"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11"
bevy-inspector-egui = "0.19"
rand = { version = "0.8", features = ["small_rng"] }
anyhow = "1.0"
console_error_panic_hook = "0.1"
web-time = "0.2"
crossbeam = "0.8"
dyn-clone = "1.0"
plotters = "0.3.5"

[profile.release]
debug = true

[dev-dependencies]
bevy_pancam = { version = "0.9", features = ["bevy_egui"] }
grid_wfc = { path = "grid_wfc" }
criterion = "0.5"

[[bench]]
name = "wfc"
harness = false

[[bench]]
name = "stats"
harness = false
