[package]
name = "hierarchical-wfc"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11"
rand = { version = "0.8", features = ["small_rng"] }
anyhow = "1.0"
console_error_panic_hook = "0.1"
web-time = "0.2"
crossbeam = "0.8"
dyn-clone = "1.0"
priority-queue = "1.3.2"

[profile.release]
debug = true

[[bench]]
name = "stats"
harness = false

[[bench]]
name = "brian"
harness = false

[[bench]]
name = "failure_rate"
harness = false

[[bench]]
name = "standard"
harness = false
