[package]
name = "chunking"
description = "Implementation of the Wave Function collapse algorithm using novel approaches to chunking, with additional preliminary research into combined Hierarchical and Semantic extensions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_wfc = { path = "./core_wfc" }
grid_wfc = { path = "./grid_wfc" }
bevy = "0.11"
bevy-inspector-egui = "0.20"
bevy_pancam = { version = "0.9", features = ["bevy_egui"] }
rand = { version = "0.8", features = ["small_rng"] }
dyn-clone = "1.0"
serde = "1.0"
serde-xml-rs = "0.6"

[[bench]]
name = "stats"
harness = false

[[bench]]
name = "brian"
harness = false

[[bench]]
name = "failure_rate"
harness = false

[[bench]]
name = "standard"
harness = false

[package.metadata.bundle]
